# brownfield-codebase-cartographer

./: .env.example  .gitignore  .pre-commit-config.yaml  BROWNFIELD_CARTOGRAPHER_REPORT.md  INTERIM_REPORT.md  LICENSE  README.md  RECONNAISSANCE.md  check.sh  plan.md  plan_for_me.md  pyproject.toml
.agents/rules/: uv.md
frontend/: package-lock.json  package.json  postcss.config.mjs
frontend/app/: page.tsx
frontend/components/: CommandCenter.tsx  Documentation.tsx  GraphView.tsx  NavigatorChat.tsx
src/: api_models.py  cli.py  orchestrator.py  server.py  state_tracker.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/models/: schema.py
src/utils/: cost.py
tests/: test_advanced_features.py  test_archivist.py  test_cli.py  test_dag_config_parser.py  test_e2e_pipeline.py  test_graph.py  test_hydrologist.py  test_lineage_serialization.py  test_navigator.py  test_navigator_enhanced.py  test_orchestrator.py  test_python_dataflow.py  test_python_dataflow_extended.py  test_schema_day3.py  test_semanticist.py  test_sql_lineage.py  test_surveyor.py
