[project]
name = "brownfield-codebase-cartographer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jedi>=0.19.2",
    "mypy>=1.19.1",
    "networkx>=3.6.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "sqlglot>=29.0.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-sql>=0.3.11",
    "tree-sitter-yaml>=0.7.2",
    "typer>=0.24.1",
]

[project.scripts]
cartographer = "src.cli:app"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "types-networkx>=3.6.1.20260303",
    "types-pyyaml>=6.0.12.20250915",
]
