[project]
name = "brownfield-codebase-cartographer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jedi>=0.19.2",
    "langchain>=1.2.12",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.1",
    "mypy>=1.19.1",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.5",
    "scikit-learn>=1.8.0",
    "sqlglot>=29.0.1",
    "sse-starlette>=3.3.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-sql>=0.3.11",
    "tree-sitter-yaml>=0.7.2",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
cartographer = "src.cli:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "types-networkx>=3.6.1.20260303",
    "types-pyyaml>=6.0.12.20250915",
]
